syntax = "proto3";
package example;

// ------------- 用户服务 ------------ //

service User {
  rpc FindList(FindListReq) returns (FindListRes) {}
}

message UserInfo {
  int32 uid = 1;
  string name = 2;
  string avatar = 3;
}

message FindListReq {
  int32 limit = 1;
}

message FindListRes {
  int32             code = 1;
  string            msg  = 2;
  repeated UserInfo data = 3;
}